[gd_scene load_steps=5 format=3 uid="uid://bar4643f8e3b6"]

[ext_resource type="Script" uid="uid://cqjl38encvcck" path="res://Scripts/settings.gd" id="1_ervou"]
[ext_resource type="Texture2D" uid="uid://1wdfk5wr3waq" path="res://Textures/discord.png" id="2_piiv8"]
[ext_resource type="Texture2D" uid="uid://bvf3wcwmxvlj" path="res://Textures/itch.png" id="3_f1q7l"]
[ext_resource type="AudioStream" uid="uid://bd437n38sxpm4" path="res://sounds/strawberry_cheesecake.mp3" id="4_f1q7l"]

[node name="Settings" type="CanvasLayer"]
script = ExtResource("1_ervou")

[node name="Settings_BG" type="ColorRect" parent="."]
offset_left = 277.0
offset_top = 4563.0
offset_right = 317.0
offset_bottom = 4603.0
scale = Vector2(1586.89, -736.167)
color = Color(0.227451, 0.227451, 0.227451, 0.494118)

[node name="Settings_BG2" type="ColorRect" parent="."]
offset_left = -63199.0
offset_top = 6530.0
offset_right = -63159.0
offset_bottom = 6570.0
scale = Vector2(1586.89, -736.167)
color = Color(0.227451, 0.227451, 0.227451, 1)

[node name="Social" type="CanvasLayer" parent="."]

[node name="Discord" type="Label" parent="Social"]
offset_left = 77.0
offset_top = 522.0
offset_right = 135.0
offset_bottom = 545.0
scale = Vector2(2.1244, 1.99228)
text = "@.x.v.c."

[node name="Discord2" type="TextureRect" parent="Social"]
offset_left = 7.0
offset_top = 519.0
offset_right = 263.0
offset_bottom = 775.0
scale = Vector2(0.213047, 0.213779)
texture = ExtResource("2_piiv8")

[node name="Itch" type="Label" parent="Social"]
offset_left = 79.0
offset_top = 580.0
offset_right = 179.0
offset_bottom = 603.0
scale = Vector2(1.88971, 2.06066)
text = "@YikeGames"

[node name="Itch2" type="TextureRect" parent="Social"]
offset_left = 8.0
offset_top = 582.0
offset_right = 508.0
offset_bottom = 1082.0
scale = Vector2(0.105103, 0.0984523)
texture = ExtResource("3_f1q7l")

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_top = 3.0
offset_right = 41.0
offset_bottom = 43.0

[node name="Resume_Btn" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 12.0
offset_top = 15.0
offset_right = 82.0
offset_bottom = 46.0
scale = Vector2(3.54395, 3.02276)
tooltip_text = "Resume Game"
text = "Resume"

[node name="Sound_Btn" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 12.0
offset_top = 143.0
offset_right = 82.0
offset_bottom = 174.0
scale = Vector2(3.54395, 3.02276)
tooltip_text = "Resume Game"
text = "Sound
"

[node name="Sound_Tab" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Music" type="CheckBox" parent="Sound_Tab"]
layout_mode = 0
offset_left = 291.0
offset_top = 26.0
offset_right = 365.0
offset_bottom = 57.0
scale = Vector2(2.25648, 2.4126)
text = "Music"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_f1q7l")
volume_db = 24.0
max_distance = 4096.0
parameters/looping = true

[connection signal="pressed" from="Buttons/Resume_Btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="Buttons/Sound_Btn" to="." method="_on_sound_btn_pressed"]
[connection signal="toggled" from="Sound_Tab/Music" to="." method="_on_check_box_toggled"]
